working on README 2020/9/7

--- a/db-service/config/haproxy/haproxy.cfg
+++ b/db-service/config/haproxy/haproxy.cfg
@@ -16,7 +16,7 @@ listen stats
     stats hide-version
     stats refresh 30s
     stats show-node
-    stats auth admin:13656195
+    stats auth admin:admin
     stats uri  /haproxy?stats
 
 frontend http_in
